# home-register

./: .dockerignore  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .grype.yaml  .syft.yaml  CHANGELOG.md  Cargo.toml  DEPLOYMENT_STATUS.md  Dockerfile  LICENSE-POLICY.md  README.md  TESTING_REPORTS.md  assign_sample_data.ps1  clippy.toml  deny.toml  docker-compose.prod.yml  docker-compose.yml  package.json  preflight-output.txt  rustfmt.toml  sbom.json  tarpaulin.toml  test_reporting.ps1
.cargo/: config.toml
.github/: copilot-instructions.md
.github/docs/: LICENSE-POLICY.md  RELEASE_PROCESS.md
.github/docs/SubAgent docs/: add_item_button_fix_review.md  add_item_button_fix_spec.md  alpine_migration_review.md  backup_restore_review.md  backup_restore_review_final.md  backup_restore_spec.md  badge_display_fix_review.md  badge_display_fix_spec.md  cache_and_sample_data_fixes.md  cache_and_sample_data_fixes_review.md  cargo_deny_fixes.md  cargo_deny_fixes_review.md  cargo_fmt_fixes_review.md  cargo_fmt_fixes_review_final.md  cargo_fmt_verification_final.md  copy_all_and_workflow_fixes.md  copy_all_and_workflow_fixes_review.md  csp_ratelimit_fix_spec.md  docker_migration_bundling_review.md  docker_migration_bundling_spec.md  eslint_fixes_review.md  ghcr_beta_release_review.md  ghcr_beta_release_spec.md  github_actions_fix_review.md  github_actions_fix_round2_review.md  github_actions_fix_spec.md  instructions_popup_review.md  instructions_popup_review_final.md  instructions_popup_spec.md  inventory_reporting_refinement_summary.md  inventory_reporting_review.md  inventory_reporting_review_final.md  inventory_reporting_spec.md  item_card_fixes_review.md  item_card_fixes_review_final.md  item_card_fixes_spec.md  mobile_ui_fixes.md  mobile_ui_fixes_review.md  notification_enhancements_review.md  notification_enhancements_review_final.md  (+38 more)
.github/docs/audit/: SECURITY_AUDIT_2026-02-11.md
.github/workflows/: ci.yml  release.yml  security.yml  weekly-audit.yml
coverage/: lcov.info  tarpaulin-report.html  tarpaulin-report.json
docs/deployment/: README.md  database-production.md  high-availability.md  monitoring-logging.md  quickstart.md  reverse-proxy-caddy.md  reverse-proxy-nginx.md  reverse-proxy-traefik.md  security-hardening.md  troubleshooting.md
docs/examples/: Caddyfile  backup.sh  docker-compose-production.yml  nginx.conf  restore.sh
frontend/: .npmrc  eslint.config.mjs  index.html  package-lock.json  package-lock.json.backup  package.json  sync-dist.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx
frontend/src/components/: AllAccessManagement.tsx  BackupRestoreSection.tsx  ChangePasswordModal.tsx  ConfirmModal.tsx  EditProfileModal.tsx  EmptyState.tsx  Header.tsx  ImageLightbox.tsx  ImageOrganizerInput.tsx  InstructionsModal.tsx  LoadingState.tsx  Modal.tsx  RecoveryCodesSection.tsx  ShareInventoryModal.tsx  Sidebar.tsx  Toast.tsx  TotpSettings.tsx  UserManagement.tsx  UserMenu.tsx  WarrantyNotificationBanner.tsx  index.ts
frontend/src/context/: AppContext.tsx  AuthContext.tsx
frontend/src/pages/: InventoriesPage.tsx  InventoryDetailPage.tsx  InventoryReportPage.tsx  LoginPage.tsx  NotificationsPage.tsx  OrganizersPage.tsx  RecoveryPage.tsx  RegisterPage.tsx  SettingsPage.tsx  SetupPage.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/styles/: auth.css  buttons.css  cards.css  (+10 more)
migrations/: 001_create_items_table.sql  002_create_inventories_table.sql  003_add_missing_item_columns.sql  004_fix_price_column_type.sql  005_create_categories_table.sql  006_create_tags_table.sql  008_add_item_extended_fields.sql  011_migrate_existing_data_to_organizers.sql  012_fix_cascade_deletes.sql  013_create_users_table.sql  014_add_user_to_inventories.sql  017_remove_email_column.sql  018_create_recovery_codes_table.sql  020_assign_sample_data_to_first_admin.sql  V007__create_custom_fields_table.sql  V009__add_inventory_image_url.sql  V010__create_organizers_tables.sql  V013__create_users_table.sql  V015__create_user_settings_table.sql  V016__update_sharing_permissions.sql  V019__add_sample_inventory_data.sql  V021__remove_sample_data.sql  V022__add_image_organizer_type.sql  V023__create_totp_settings_table.sql
release_notes/: README.md  v0.1.0-beta.1.md  v0.1.0-beta.2.md  v0.1.0-beta.3.md
scripts/: DEV_STANDARDS.md  generate-icons.ps1  init-test-db.sql  preflight.ps1  preflight.sh  setup-test-db.ps1  setup-test-db.sh  version-bump.ps1
src/: lib.rs  main.rs
src/api/: auth.rs  backup.rs  mod.rs  mod_new.rs  mod_old.rs  totp.rs
src/auth/: mod.rs  totp.rs
src/db/: mod.rs
src/models/: mod.rs
static/: index.html
tests/: integration_test.rs  test_api_integration.rs  test_auth.rs  test_db.rs  test_models.rs
tests/common/: mod.rs
(+10 files in other folders)
