[package]
name = "home-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"        # For serving static files
actix-cors = "0.6"         # For CORS support if needed
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.10"
env_logger = "0.10"        # For better logging
log = "0.4"                # Logging support
chrono = { version = "0.4", features = ["serde"] } # For date handling
rust_decimal = { version = "1.0", features = ["tokio-pg"] } # For PostgreSQL DECIMAL support

# Authentication & Security
jsonwebtoken = "9"         # JWT token handling
argon2 = "0.5"             # Password hashing (Argon2id)
uuid = { version = "1", features = ["v4", "serde"] }  # UUID generation
rand = "0.8"               # Random number generation for tokens
