[package]
name = "home-registry"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/your-org/home-registry"
readme = "README.md"

# Lint configuration - deny warnings in CI
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Lint groups - set lower priority so individual overrides work
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these specific lints from pedantic
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
# Web framework - pinned versions for supply chain security
actix-web = "=4.12.1"
actix-files = "=0.6.10"    # For serving static files
actix-cors = "=0.7.1"      # For CORS support
actix-extensible-rate-limit = "=0.4.0"  # Rate limiting middleware (MIT/Apache-2.0)
tokio = { version = "=1.49.0", features = ["full"] }
serde = { version = "=1.0.220", features = ["derive"] }
serde_json = "=1.0.138"
dotenvy = "=0.15.7"
tokio-postgres = { version = "=0.7.12", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "=0.14.0"
env_logger = "=0.11.6"     # For better logging
log = "=0.4.22"            # Logging support
chrono = { version = "=0.4.39", features = ["serde"] } # For date handling
rust_decimal = { version = "=1.36.0", features = ["tokio-pg"] } # For PostgreSQL DECIMAL support

# Authentication & Security
jsonwebtoken = "=9.3.0"    # JWT token handling
argon2 = "=0.5.3"          # Password hashing (Argon2id)
uuid = { version = "=1.11.0", features = ["v4", "serde"] }  # UUID generation
rand = "=0.8.5"            # Random number generation for tokens

# Input validation
validator = { version = "=0.19.0", features = ["derive"] }

# Force minimum versions of transitive dependencies to fix security issues
# RUSTSEC-2026-0009: time crate DoS vulnerability (requires v0.3.47+)
time = ">=0.3.47"
